samples/ambient-argo/.generated/application/reviews.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reviews
    service: reviews
  name: reviews
spec:
  ports:
    - name: http
      port: 9080
  selector:
    app: reviews
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reviews
    version: v1
  name: reviews-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      containers:
        - env:
            - name: LOG_DIR
              value: /tmp/logs
          image: registry.istio.io/release/examples-bookinfo-reviews-v1:1.18.0
          imagePullPolicy: IfNotPresent
          name: reviews
          ports:
            - containerPort: 9080
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /opt/ibm/wlp/output
              name: wlp-output
      serviceAccountName: bookinfo-reviews
      volumes:
        - emptyDir: {}
          name: wlp-output
        - emptyDir: {}
          name: tmp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reviews
    version: v2
  name: reviews-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v2
  template:
    metadata:
      labels:
        app: reviews
        version: v2
    spec:
      containers:
        - env:
            - name: LOG_DIR
              value: /tmp/logs
          image: registry.istio.io/release/examples-bookinfo-reviews-v2:1.18.0
          imagePullPolicy: IfNotPresent
          name: reviews
          ports:
            - containerPort: 9080
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /opt/ibm/wlp/output
              name: wlp-output
      serviceAccountName: bookinfo-reviews
      volumes:
        - emptyDir: {}
          name: wlp-output
        - emptyDir: {}
          name: tmp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reviews
    version: v3
  name: reviews-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v3
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      containers:
        - env:
            - name: LOG_DIR
              value: /tmp/logs
          image: registry.istio.io/release/examples-bookinfo-reviews-v3:1.18.0
          imagePullPolicy: IfNotPresent
          name: reviews
          ports:
            - containerPort: 9080
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /opt/ibm/wlp/output
              name: wlp-output
      serviceAccountName: bookinfo-reviews
      volumes:
        - emptyDir: {}
          name: wlp-output
        - emptyDir: {}
          name: tmp
